--- a/playbooks/roles/security/templates/docker/docker-compose.yml
+++ b/playbooks/roles/security/templates/docker/docker-compose.yml
@@ -50,7 +50,8 @@ services:
 
     security-api:
         container_name: security-api
-        user: ${UID_GID}
+        # user: ${UID_GID}
+        user: root
         image: {{ security_api_image }}
         environment:
             - TAPIS_SITE_ID={{ security_service_site_id }}
