--- a/playbooks/generate.yml
+++ b/playbooks/generate.yml
@@ -16,30 +16,42 @@
       path: '{{ tapisdir }}'
       state: directory
 
-  - name: debug remote hosts
-    ansible.builtin.debug:
-      msg: "{{ groupvars }}"
+  # - name: debug remote hosts
+  #   ansible.builtin.debug:
+  #     msg: "{{ vars }}"
 
-  - name: set multinode mode
-    set_fact:
-      multinode: "{{ true if hostvars[groups['remote_hosts']] is defined else false }}"
-      cacheable: true
+  # - name: debug1 is multinode?
+  #   ansible.builtin.debug:
+  #     msg: "{{ inventory_hostname }} is remote? : {{ is_remote }}"
+  #   vars:
+  #     is_remote: "{{ True if remote else False }}"
 
-  - name: debug1 is multinode?
-    ansible.builtin.debug:
-      msg: "is multinode? : {{ multinode }}"
+  - name: set hostname facts for remote hosts
+    block:
+      - name: increment ports
+        ansible.builtin.set_fact:
+          "{{ item }}_port": "{{ 8080 + indexnum }}"
+          cacheable: True
+        # ansible.builtin.debug:
+        #   msg: "{{ item }}_port: {{ 8080 + indexnum }}"
+        loop_control:
+          index_var: indexnum
+        loop: "{{ components_to_deploy }}"
 
-    #check if params are invalid then abort below all tasks.  
-  - name: exit
-    fail: 
-      msg: "exit because of debug"
-    when: "param1 is not defined or param2 is not defined"
+      - name: map components to hosts
+        ansible.builtin.set_fact: 
+          "{{ item }}_host": "https://{{ inventory_hostname }}"
+          cacheable: True
+        loop: "{{ components_to_deploy }}"
 
-  - name: set variables for remote components
-    include_role: 
-      name: multinode
-    when: 
+      - name: generate proxy/location files for each host
+        include_role:
+          name: 'proxy'
 
+    when: remote is defined and remote
+    
+      
+      
 
 ### tapis components
 
