--- a/playbooks/roles/apps/templates/docker/docker-compose.yml
+++ b/playbooks/roles/apps/templates/docker/docker-compose.yml
@@ -7,7 +7,8 @@ networks:
 services:
     apps-api:
         container_name: apps-api
-        user: ${UID_GID}
+        # user: ${UID_GID}
+        user: root
         image: {{ apps_api_image }}
         networks:
             - tapis
