--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -69,7 +69,8 @@ services:
 
   files-workers:
     container_name: files-workers
-    user: ${UID_GID}
+    # user: ${UID_GID}
+    user: root
     image: {{ files_workers_image }}
     networks:
       - tapis
