jobs-rabbitmq healthcheck

--- a/playbooks/roles/jobs/templates/docker/docker-compose.yml
+++ b/playbooks/roles/jobs/templates/docker/docker-compose.yml
@@ -90,7 +90,7 @@ services:
         networks:
             - tapis
         healthcheck:
-            test: rabbitmq-diagnostics -q ping
+            test: rabbitmq-diagnostics check_running
 
     jobs-altqueue:
         # user: ${UID_GID}
