--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     networks: 
       - tapis
     healthcheck:
-      test: rabbitmq-diagnostics -q ping
+      test: rabbitmq-diagnostics check_running
 
   files-postgres:
     container_name: files-postgres
