--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -77,9 +77,6 @@ services:
     env_file: 
       - {{ tapisdatadir }}/files/env
     environment:
-{% if files_node_name == true %}
-      - TAPIS_LOCAL_NODE_NAME={{ global_tapis_domain }}
-{% endif %}
       - TAPIS_SITE_ID={{ files_service_site_id }}
       - TOKENS_SERVICE_URL={{ files_service_url }}
       - TENANTS_SERVICE_URL={{ files_service_url}}
@@ -98,6 +95,7 @@ services:
         condition: service_started
 
   files-api:
+    restart_policy: unless-stopped
     # user: ${UID_GID}
     user: root
     container_name: files-api
@@ -106,10 +104,11 @@ services:
       - tapis
     env_file:
       - {{ tapisdatadir }}/files/env
-    environment:
-{% if files_node_name == true %}
-      - TAPIS_LOCAL_NODE_NAME={{ global_tapis_domain }}
+{% if files_port %}
+    ports:
+      - "{{ files_port }}:8080"
 {% endif %}
+    environment:
       - TAPIS_SITE_ID={{ files_service_site_id }}
       - TOKENS_SERVICE_URL={{ files_service_url }}
       - TENANTS_SERVICE_URL={{ files_service_url}}
