--- a/playbooks/roles/security/templates/docker/docker-compose.yml
+++ b/playbooks/roles/security/templates/docker/docker-compose.yml
@@ -8,6 +8,7 @@ networks:
 services:
     sk-postgres:
         container_name: sk-postgres
+        restart_policy: unless-stopped
         image: {{ security_postgres_image }}
         networks:
             - tapis
@@ -34,6 +35,7 @@ services:
 
     security-migrations:
         container_name: security-migrations
+        restart_policy: unless-stopped
         environment:
             - HOST=sk-postgres
             - PORT=5432 
@@ -50,6 +52,7 @@ services:
 
     security-api:
         container_name: security-api
+        restart_policy: unless-stopped
         #user: ${UID_GID}
         user: root
         image: {{ security_api_image }}
