--- a/playbooks/roles/streams/templates/docker/docker-compose.yml
+++ b/playbooks/roles/streams/templates/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
   # CHORDS Rails application: nginx + rails + CHORDS rails code
   streams:
     container_name: streams-api
+    restart_policy: unless-stopped
     image: {{ streams_api_image }}
     env_file:
       - {{ tapisdatadir }}/streams/env
@@ -20,6 +21,7 @@ services:
 
   chords-app:
     container_name: chords-app
+    restart_policy: unless-stopped
     image: {{ streams_tapis_chords_app_image }}
     networks:
       - tapis
@@ -80,6 +82,7 @@ services:
   # Rails mysql database
   chords-mysql:
     container_name: chords-mysql
+    restart_policy: unless-stopped
     image: {{ streams_mysql_image }}
     networks: 
       - tapis
@@ -102,6 +105,7 @@ services:
 
   chords-influxdb2:
     container_name: chords-influxdb2
+    restart_policy: unless-stopped
     image: {{ streams_influxdb2_image }}
     networks: 
       - tapis
