--- a/playbooks/roles/tenants/templates/docker/docker-compose.yml
+++ b/playbooks/roles/tenants/templates/docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
 
   tenants-postgres:
     container_name: tenants-postgres
+    restart_policy: unless-stopped
     image: {{ tenants_postgres_image }}
     volumes:
       - {{ tapisdatadir }}/tenants/postgres:/pgdata
@@ -27,6 +28,7 @@ services:
 
   tenants-migrations:
     container_name: tenants-migrations
+    restart_policy: unless-stopped
     image: {{ tenants_migrations_image }}
     volumes:
       - ./tenants-config.json:/home/tapis/config.json
@@ -45,6 +47,7 @@ services:
 
   tenants-api:
     container_name: tenants-api
+    restart_policy: unless-stopped
     image: {{ tenants_api_image }}
     volumes:
     #   - ./service.log:/home/tapis/service.log
