--- a/playbooks/roles/vault/templates/docker/docker-compose.yml
+++ b/playbooks/roles/vault/templates/docker/docker-compose.yml
@@ -20,4 +20,10 @@ services:
       - {{ vault_data_dir }}/certs:/vault/certs
     networks:
       - tapis
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "--proxy", "off", "http://127.0.0.1:8200/v1/sys/health?standbyok=true" ]
+      interval: 10s
+      timeout: 3s
+      retries: 10
+      start_period: 5s
 
