--- a/playbooks/generate.yml
+++ b/playbooks/generate.yml
@@ -15,6 +15,11 @@
     file: 
       path: '{{ tapisdir }}'
       state: directory
+      
+  - name: create tapisdatadir 
+    file: 
+      path: '{{ tapisdatadir }}'
+      state: directory
 
 
 ### tapis components
