--- a/playbooks/roles/authenticator/defaults/main/vars.yml
+++ b/playbooks/roles/authenticator/defaults/main/vars.yml
@@ -1,5 +1,6 @@
 ---
 
+authenticator_service_version: 1.6.2
 authenticator_log_level: INFO
 authenticator_show_traceback: false
 authenticator_image_pull_policy: Always
