--- a/playbooks/roles/authenticator/templates/docker/authenticator-config.json
+++ b/playbooks/roles/authenticator/templates/docker/authenticator-config.json
@@ -7,5 +7,6 @@
     "show_traceback": {{ authenticator_show_traceback | to_json }},
     "sql_db_url": "authenticator-postgres:5432",
     "dev_ldap_tenant_id": "{{authenticator_dev_ldap_tenant_id}}",
-    "log_level": "{{authenticator_log_level}}"
+    "log_level": "{{authenticator_log_level}}",
+    "version": "{{authenticator_service_version}}"
 }
