--- a/playbooks/roles/authenticator/templates/kube/authenticator-config.yml
+++ b/playbooks/roles/authenticator/templates/kube/authenticator-config.yml
@@ -15,5 +15,6 @@ data:
       "show_traceback": {{authenticator_show_traceback|to_json}},
       "sql_db_url": "authenticator-postgres:5432/authenticator",
       "dev_ldap_tenant_id": "{{authenticator_dev_ldap_tenant_id}}",
-      "log_level": "{{authenticator_log_level}}"
+      "log_level": "{{authenticator_log_level}}",
+      "version": "{{authenticator_service_version}}"
     }
