Actors docker refresh

--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -41,6 +41,7 @@ stream {
         listen                 5510;
         ssl_preread            off;
         proxy_timeout          600s;
+        proxy_socket_keepalive on;
         #access_log /dev/stdout stream_routing; # debug log if needed
         proxy_pass             pods_upstream;
         proxy_next_upstream    on;
