put token check url in variable to force name resolution

--- a/playbooks/roles/proxy/templates/docker/locations/site-router-token-check.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/site-router-token-check.conf
@@ -42,8 +42,8 @@ location /_auth {
     proxy_set_header Content-Length "";
     proxy_set_header X-Tapis-Token $http_x_tapis_token;
 
-    set $upstream "http://site-router:8000/v3/site-router/tokens/check";
+    set $token_check "http://site-router:8000/v3/site-router/tokens/check";
     
-    proxy_pass $upstream;
+    proxy_pass $token_check;
 }
 
