--- a/playbooks/roles/authenticator/templates/docker/authenticator-config.json
+++ b/playbooks/roles/authenticator/templates/docker/authenticator-config.json
@@ -1,10 +1,10 @@
 {
-    "primary_site_admin_tenant_base_url": "{{authenticator_service_url}}",
+    "primary_site_admin_tenant_base_url": "{{authenticator_primary_site_admin_tenant_base_url}}",
     "service_site_id": "{{authenticator_service_site_id}}",
     "service_tenant_id": "{{authenticator_service_tenant_id}}",
     "service_name": "{{authenticator_service_name}}",
-    "tenants": {{ authenticator_service_tenants | to_json }},
-    "show_traceback": {{ authenticator_show_traceback | to_json }},
+    "tenants": "{{ authenticator_service_tenants | to_json }}",
+    "show_traceback": "{{ authenticator_show_traceback | to_json }}",
     "sql_db_url": "authenticator-postgres:5432",
     "dev_ldap_tenant_id": "{{authenticator_dev_ldap_tenant_id}}",
     "log_level": "{{authenticator_log_level}}",
