--- a/playbooks/roles/security/templates/docker/security-kernal-config.json
+++ b/playbooks/roles/security/templates/docker/security-kernal-config.json
@@ -1,5 +1,5 @@
 {
-    "service_site_url": "{{security_service_url}}",
+    "service_site_url": "{{security_primary_site_admin_tenant_base_url}}",
     "service_tenant_id": "{{security_service_tenant_id}}",
     "site_id": "{{security_service_site_id}}",
     "service_name": "{{security_service_name}}"
